--- a/react-query_Pratcise/package.json
+++ b/react-query_Pratcise/package.json
@@ -11,6 +11,7 @@
     "server": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.11",
     "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
