--- a/react-query_Pratcise/package.json
+++ b/react-query_Pratcise/package.json
@@ -14,7 +14,7 @@
     "@tanstack/react-query": "^5.59.11",
     "@tanstack/react-query-devtools": "^5.59.11",
     "axios": "^1.7.7",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
