--- a/react-query_Pratcise/package.json
+++ b/react-query_Pratcise/package.json
@@ -17,6 +17,7 @@
     "json-server": "^0.17.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
